[metadata]
name = speckenv
version = 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/speckenv/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules = speckenv
zip_safe = False

[flake8]
exclude = venv,build,docs,.tox
ignore = E203,W503
max-complexity = 10
max-line-length = 88

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
include =
    *speckenv*
omit =
    *migrations*
    *tests*
    *.tox*
