[metadata]
name = speckenv
version = 3.3.2
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/speckenv/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules =
    speckenv
    speckenv_django
    speckenv_django_patch
python_requires = >=3.8
zip_safe = False

[coverage:run]
branch = True
include =
    *speckenv*
omit =
    *migrations*
    *tests*
    *.tox*
